Implement task 6 - add the swagger for all methods of book entity
