# books_service/docs/swagger.json
@@ -48,9 +48,6 @@
         "/add-author": {
             "post": {
                 "description": "creates a new author",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -78,9 +75,6 @@
         "/add-category": {
             "post": {
                 "description": "creates a new category",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -141,7 +135,7 @@
                 }
             }
         },
-        "/delete-category/{delete_category}": {
+        "/delete-category/{category_uuid}": {
             "delete": {
                 "description": "delete a category using the DELETE request",
                 "consumes": [
@@ -255,7 +249,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Category"
                         }
                     }
                 }
@@ -285,7 +279,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Author"
                         }
                     }
                 }
@@ -315,7 +309,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Category"
                         }
                     }
                 }
@@ -345,7 +339,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/main.Book"
                         }
                     }
                 }
@@ -444,9 +438,6 @@
         "/update": {
             "patch": {
                 "description": "update a book using the PATCH request",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -492,9 +483,6 @@
         "/update-author": {
             "patch": {
                 "description": "update an author using the PATCH request",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -528,9 +516,6 @@
         "/update-category": {
             "patch": {
                 "description": "update a category using the PUT request",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
